update og:iamge from png to jpeg, add width & height

--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
     <noscript>
         <link rel="stylesheet" href="css/bootstrap.min.css">
     </noscript>
-    <link rel="stylesheet" href="css/styles.css">
+
+    <!-- Preload Your Custom Styles -->
+    <link rel="preload" href="css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="css/styles.css">
+    </noscript>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
