update og:iamge from png to jpeg, add width & height

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
                     <source media="(max-width: 992px)" srcset="/images/logo-v1-320.webp">
 
-                    <img src="/images/logo-v1-1200.webp" alt="Responsive Logo" class="img-fluid full-width-img">
+                    <img src="/images/logo-v1-1200.webp" alt="Responsive Logo" class="img-fluid full-width-img"
+                        width="1200px">
                 </picture>
 
                 <!-- Hand SVG -->
@@ -107,7 +108,8 @@
                         <div class="z-3 mt-3">
                             <!-- <img alt="logo" width="432" decoding="async" src="images/logo-v2.webp" class="img-fluid">--->
                             <picture>
-                                <source media="(max-width: 430px)" srcset="/images/logo-v2-370.webp">
+                                <source media="(max-width: 430px)" srcset="/images/logo-v2-216.webp">
+                                <source media="(max-width: 576px)" srcset="/images/logo-v2-370.webp">
                                 <img src="/images/logo-v2-430.webp" alt="Responsive Logo" class="img-fluid">
                             </picture>
                         </div>
