--- a/index.html
+++ b/index.html
@@ -57,16 +57,17 @@
                     <source media="(max-width: 992px)" srcset="/images/logo-v1-320.webp">
 
                     <img src="/images/logo-v1-1200.webp" alt="Responsive Logo" class="img-fluid full-width-img"
-                        width="1200px">
+                        width="1200" height="120">
                 </picture>
 
-                <!-- Hand SVG -->
-                <svg class="hand hand-icon" viewBox="0 0 256 256">
+                <!--  
+                                <svg class="hand hand-icon" viewBox="0 0 256 256">
                     <g transform="translate(1.4 1.4) scale(2.81 2.81)" fill="rgb(251,206,157)">
                         <path
                             d="M 73.26 55.227 l 0.961 -0.704 c 4.03 -2.951 5.08 -8.394 2.342 -12.134 c -1.331 -1.818 -3.353 -2.963 -5.696 -3.224 c -0.57 -0.063 -1.143 -0.07 -1.71 -0.026 c 1.979 -2.976 2.11 -6.833 0.014 -9.694 c -1.516 -2.07 -3.88 -3.186 -6.372 -3.273 l 14.687 -10.755 c 4.029 -2.95 5.08 -8.393 2.342 -12.133 c -2.738 -3.739 -8.243 -4.38 -12.274 -1.429 L 26.838 31.67 l 0.208 -10.932 c 0.043 -2.269 -0.819 -4.368 -2.428 -5.912 c -1.668 -1.601 -3.916 -2.404 -6.323 -2.257 c -4.829 0.291 -8.83 4.364 -8.92 9.077 L 8.657 59.508 c -0.152 6.711 1.8 13.032 5.643 18.281 c 4.952 6.762 12.499 11.024 21.251 12.001 C 36.815 89.93 38.081 90 39.346 90 c 7.452 -0.001 14.814 -2.428 21.065 -7.007 L 77.29 70.632 c 1.932 -1.414 3.245 -3.449 3.697 -5.73 c 0.458 -2.311 -0.023 -4.586 -1.354 -6.403 C 78.116 56.43 75.752 55.314 73.26 55.227 z" />
                     </g>
                 </svg>
+                 -->
             </div>
             <p class="fs-4 mb-5 fw-semibold animation_btn position-absolute" style="color: #fcfbf4;">
                 សូមចុចលើអេក្រង់ដើម្បីបើកទទួលធៀប
