update og:iamge from png to jpeg, add width & height

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- First Page -->
     <header id="first-page">
         <div id="start-button" class="d-flex justify-content-center align-items-end w-100 position-relative"
-            style="height: 100vh; z-index: 10;">
+            width="1200" style="height: 100vh; z-index: 10;">
 
             <!-- Background image if needed -->
             <div class="bg-image"></div>
@@ -55,9 +55,7 @@
                 <picture>
                     <source media="(max-width: 432px)" srcset="/images/logo-v1-180.webp">
                     <source media="(max-width: 576px)" srcset="/images/logo-v1-216.webp">
-
                     <source media="(max-width: 992px)" srcset="/images/logo-v1-320.webp">
-
                     <img src="/images/logo-v1-1200.webp" alt="Responsive Logo" class="img-fluid full-width-img"
                         width="1200" height="120">
                 </picture>
