update og:iamge from png to jpeg, add width & height

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <source src="wedding_background_instrument.mp3" />
     </audio>
     <!-- Background Image ---->
-    <div class="bg-image" width="1620" height="1080"></div>
+    <div class="bg-image" width="1200" height="938"></div>
 
     <!-- First Page -->
     <header id="first-page">
@@ -48,7 +48,7 @@
             width="1200" style="height: 100vh; z-index: 10;">
 
             <!-- Background image if needed -->
-            <div class="bg-image"></div>
+            <div class="bg-image" width="1200" height="938"></div>
 
             <!-- Hero logo -->
             <div class="d-flex justify-content-center hero-logo" style="position: relative;">
@@ -56,8 +56,8 @@
                     <source media="(max-width: 432px)" srcset="/images/logo-v1-180.webp">
                     <source media="(max-width: 576px)" srcset="/images/logo-v1-216.webp">
                     <source media="(max-width: 992px)" srcset="/images/logo-v1-320.webp">
-                    <img src="/images/logo-v1-1200.webp" alt="Responsive Logo" class="img-fluid full-width-img"
-                        width="1200" height="120">
+                    <img src="/images/logo-v1-1200.webp" alt="Responsive Logo" class="img-fluid" width="1200"
+                        height="120">
                 </picture>
 
                 <!--  
