--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="bg-image" width="1200" height="938"></div>
 
             <!-- Hero logo -->
-            <div class="d-flex justify-content-center hero-logo" style="position: relative;">
+            <div class="d-flex justify-content-center hero-logo" style="position: relative; aspect-ratio: 10/1">
                 <picture>
                     <source media="(max-width: 432px)" srcset="/images/logo-v1-180.webp">
                     <source media="(max-width: 576px)" srcset="/images/logo-v1-216.webp">
@@ -69,7 +69,7 @@
                 </svg>
                  -->
             </div>
-            <p class="fs-4 mb-5 fw-semibold animation_btn position-absolute" style="color: #fcfbf4;">
+            <p class="fs-4 mb-2 fw-semibold animation_btn position-absolute" style="color: #fcfbf4;">
                 សូមចុចលើអេក្រង់ដើម្បីបើកទទួលធៀប
             </p>
         </div>
