--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="bg-image" width="1200" height="938"></div>
 
             <!-- Hero logo -->
-            <div class="d-flex justify-content-center hero-logo" style="position: relative; aspect-ratio: 10/1">
+            <div class="d-flex justify-content-center hero-logo" style="position: relative;">
                 <picture>
                     <source media="(max-width: 432px)" srcset="/images/logo-v1-180.webp">
                     <source media="(max-width: 576px)" srcset="/images/logo-v1-216.webp">
@@ -69,7 +69,7 @@
                 </svg>
                  -->
             </div>
-            <p class="fs-4 mb-2 fw-semibold animation_btn position-absolute" style="color: #fcfbf4;">
+            <p class="fs-4 mb-5 fw-semibold animation_btn position-absolute" style="color: #fcfbf4;">
                 សូមចុចលើអេក្រង់ដើម្បីបើកទទួលធៀប
             </p>
         </div>
@@ -86,7 +86,6 @@
             <source src="images/open_clip.mp4" type="video/mp4">
         </video>
     </div>
-
     <button id="audioToggle" class="d-flex align-items-center justify-content-center rounded-circle btn-audio"
         data-bs-toggle="tooltip" data-bs-placement="left" title="Toggle audio">
         <span id="audioIcon">
@@ -96,7 +95,6 @@
             </svg>
         </span>
     </button>
-
     <main id="scrollable-page" class="position-relative min-vh-100 text-box" style="display: none; opacity: 0;">
         <div class="d-flex flex-column w-100 min-vh-100 ">
             <section id="home" class="position-relative">
