update og:iamge from png to jpeg, add width & height

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <!-- Hero logo -->
             <div class="d-flex justify-content-center hero-logo" style="position: relative;">
                 <picture>
-                    <source media="(max-width: 432px)" srcset="/images/logo-v1-180.webp">
-                    <source media="(max-width: 576px)" srcset="/images/logo-v1-216.webp">
-                    <source media="(max-width: 992px)" srcset="/images/logo-v1-320.webp">
+                    <source media="(max-width: 432px)" srcset="/images/logo-v1-180.webp" width="430" height="100">
+                    <source media="(max-width: 576px)" srcset="/images/logo-v1-216.webp" width="576" height="100">
+                    <source media="(max-width: 992px)" srcset="/images/logo-v1-320.webp" width="992" height="100">
                     <img src="/images/logo-v1-1200.webp" alt="Responsive Logo" class="img-fluid" width="1200"
                         height="120">
                 </picture>
