--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
         <link rel="stylesheet" href="css/styles.css">
     </noscript>
     <link rel="preload" as="image" href="images/logo-v2-430.webp" type="image/webp">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap
-" rel="stylesheet">
+    <link rel="preload" href="css/font/kantumruypro.woff2" as="font" type="font/woff2" crossorigin>
+
 
 </head>
 
@@ -52,7 +50,7 @@
             <!-- Hero logo -->
             <div class="d-flex justify-content-center hero-logo" style="position: relative;">
                 <picture>
-                    <source media="(max-width: 432px)" srcset="/images/logo-v1-270.webp" width="270" height="27">
+                    <source media="(max-width: 432px)" srcset="/images/logo-v1-270.webp" width="430" height="90">
                     <source media="(max-width: 576px)" srcset="/images/logo-v1-576.webp" width="576" height="58">
                     <source media="(max-width: 992px)" srcset="/images/logo-v1-992.webp" width="992" height="99">
                     <img src="/images/logo-v1-1200.webp" alt="Responsive Logo" width="1200" height="120"
@@ -85,6 +83,7 @@
             </svg>
         </span>
     </button>
+    <div class="bg-image2"></div>
     <main id="scrollable-page" class="position-relative min-vh-100 text-box" style="display: none; opacity: 0;">
         <div class="d-flex flex-column w-100 min-vh-100 ">
             <section id="home" class="position-relative">
