update og:iamge from png to jpeg, add width & height

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://leabnhawedding.com/">
+    <link rel="preload" href="/css/font/kantumruypro.woff2" as="font" type="font/woff2" crossorigin>
 
     <!-- Preload Bootstrap CSS -->
     <link rel="preload" href="css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -30,7 +31,6 @@
         <link rel="stylesheet" href="css/styles.css">
     </noscript>
     <link rel="preload" as="image" href="images/logo-v2-430.webp" type="image/webp">
-    <link rel="preload" href="css/font/kantumruypro.woff2" as="font" type="font/woff2" crossorigin>
 
 
 </head>
