--- a/index.html
+++ b/index.html
@@ -14,23 +14,19 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="Leab & Nha Wedding Invitation">
-
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://leabnhawedding.com/">
-    <link rel="preload" href="/css/font/kantumruypro.woff2" as="font" type="font/woff2" crossorigin>
-
-    <!-- Preload Bootstrap CSS -->
     <link rel="preload" href="css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
         <link rel="stylesheet" href="css/bootstrap.min.css">
     </noscript>
-
-    <!-- Preload Your Custom Styles -->
     <link rel="preload" href="css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
         <link rel="stylesheet" href="css/styles.css">
     </noscript>
     <link rel="preload" as="image" href="images/logo-v2-430.webp" type="image/webp">
+    <link rel="preload" href="/css/font/kantumruypro-variablefont_wght-webfont.woff2" as="font" type="font/woff2"
+        crossorigin>
 
 
 </head>
