--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
     <noscript>
         <link rel="stylesheet" href="css/styles.css">
     </noscript>
+
     <link rel="preload" as="image" href="images/logo-v2-430.webp" type="image/webp">
     <link rel="preload" href="/css/font/kantumruypro-variablefont_wght-webfont.woff2" as="font" type="font/woff2"
         crossorigin>
-
-
+    <link rel="preload" href="/css/font/KantumruyPro-Bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/css/font/KantumruyPro-ExtraLight.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/css/font/KantumruyPro-Light.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/css/font/KantumruyPro-Medium.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/css/font/KantumruyPro-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/css/font/KantumruyPro-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 
 <body>
