update og:iamge from png to jpeg, add width & height

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     </noscript>
 
     <link rel="preload" as="image" href="images/logo-v2-430.webp" type="image/webp">
-    <link rel="preload" href="/css/font/kantumruypro-variablefont_wght-webfont.woff2" as="font" type="font/woff2"
-        crossorigin>
+
     <link rel="preload" href="/css/font/KantumruyPro-Bold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/css/font/KantumruyPro-ExtraLight.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/css/font/KantumruyPro-Light.woff2" as="font" type="font/woff2" crossorigin>
@@ -55,7 +54,7 @@
                     <source media="(max-width: 576px)" srcset="/images/logo-v1-576.webp" width="576" height="58">
                     <source media="(max-width: 992px)" srcset="/images/logo-v1-992.webp" width="992" height="99">
                     <img src="/images/logo-v1-1200.webp" alt="Responsive Logo" width="1200" height="120"
-                        class="img-fluid">
+                        class="img-fluid" fetchpriority="high">>
                 </picture>
 
             </div>
