update og:iamge from png to jpeg, add width & height

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <source media="(max-width: 576px)" srcset="/images/logo-v1-576.webp" width="576" height="58">
                     <source media="(max-width: 992px)" srcset="/images/logo-v1-992.webp" width="992" height="99">
                     <img src="/images/logo-v1-1200.webp" alt="Responsive Logo" width="1200" height="120"
-                        class="img-fluid" fetchpriority="high">>
+                        class="img-fluid" fetchpriority="high">
                 </picture>
 
             </div>
