--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                         <h4 class="fs-4 m-0 text-center fw-semibold slide-in-left">
                             ពាក្យជូនពរ
                         </h4>
-                        <p class="text-center">
+                        <p class="text-center px-4 p-1">
                             សូមផ្ញើជូននូវពរជ័យ និងពាក្យពេចន៍ល្អៗរបស់អ្នកសម្រាប់គូស្វាមីភរិយាថ្មីថ្មោង
                         </p>
                         <div class="mt-3 w-100 d-flex justify-content-center text-center">
