--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="position-absolute w-100  fw-bold d-flex justify-content-center arrow-icon"
+                        <div id="scroll-hint"
+                            class="position-absolute w-100  fw-bold d-flex justify-content-center arrow-icon"
                             style="bottom: 2rem; font-size: 1rem;">
                             ទាញចុះក្រោម
                             <svg class="" xmlns=" http://www.w3.org/2000/svg" width="24" height="24"
@@ -375,16 +376,16 @@
                     <div class="d-flex flex-column justify-content-center align-items-center min-vh-100">
 
                         <!-- Title -->
-                        <h4 class="fs-4 m-0 text-center fw-semibold slide-in-left">
+                        <h4 class="fs-4 m-0 text-center fw-semibold ">
                             ទីតាំង
                         </h4>
 
                         <!-- Subtitle -->
-                        <p class="text-center  slide-in-left">
+                        <p class="text-center">
                             ភូមិព្រែកស្វាយ ឃុំឈើទាល ស្រុកកៀនស្វាយ ខេត្តកណ្ដាល
                         </p>
                         <!-- Map Image -->
-                        <div class="mt-3 w-100 text-center slide-in-left">
+                        <div class="mt-3 w-100 text-center">
                             <img loading="lazy" src="images/map.svg" alt="Map" class="img-fluid"
                                 style="max-width: 330px;; object-fit: contain;">
                         </div>
@@ -436,7 +437,7 @@
             <section id="wish" class="position-relative">
                 <div class="d-flex flex-column w-100 h-100">
                     <div class="d-flex flex-column justify-content-center align-items-center min-vh-100  ">
-                        <h4 class="fs-4 m-0 text-center fw-semibold slide-in-left">
+                        <h4 class="fs-4 m-0 text-center fw-semibold ">
                             ពាក្យជូនពរ
                         </h4>
                         <p class="text-center px-4 p-1">
