update og:iamge from png to jpeg, add width & height

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta property="og:image:alt" content="Leab & Nha Wedding Invitation">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://leabnhawedding.com/">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="preload" href="css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -122,11 +123,11 @@
                             </div>
                         </div>
                         <!-- Event Date -->
-                        <div class="text-center">
+                        <div class="text-center mt-5">
                             <p class="text-uppercase fs-6 fw-medium mb-0">
                                 ដែលនឹងប្រព្រឹត្តទៅនៅ
                             </p>
-                            <div class="fw-semibold">
+                            <div class="fw-semibold mt-3">
                                 <p class="text-center text-2xl text-uppercase" style="font-size: 1.3rem;">
                                     ថ្ងៃសុក្រ ទី០៤&ZeroWidthSpace; ខែមេសា <br>
                                     <span class="text-uppercase fs-2">ឆ្នាំ២០២៥</span>
