--- a/invite/ms.-lach-siengly.html
+++ b/invite/ms.-lach-siengly.html
@@ -8,7 +8,7 @@
         content="Join us as we celebrate our wedding. Find details, RSVP, and share the joy of our special day with family and friends.">
     <title>leabnhawedding</title>
     <meta property="og:title"
-        content="សូមគោរពអញ្ចើញ នាយព្រែក និង ភរិយា ចូលរួមជាភ្ញៀវចូលរួមជាអធិបតីភាព កម្មវិធីមង្គលអាពាហ៍ពិពាហ៍ 💍">
+        content="សូមគោរពអញ្ចើញ Ms. Lach Siengly ចូលរួមជាភ្ញៀវចូលរួមជាអធិបតីភាព កម្មវិធីមង្គលអាពាហ៍ពិពាហ៍ 💍">
     <meta property="og:description" content="សាក់ ប្រុសលាប និង ប៊ុនថុន កញ្ញា">
     <meta property="og:image" content="https://leabnhawedding.com/images/og-image_wedding_preview.webp">
     <meta property="og:image:width" content="1200">
